syntax = "proto3";

package backup;

// work with google drive through this service
service GoogleDrive {
    rpc Backup (BackupRequest) returns (BackupReply);
    rpc Healthcheck (BackupRequest) returns (HealthcheckReply);
//    rpc Restore (RestoreRequest) returns (RestoreReply);
}

message BackupRequest {
    string db_host = 1;
    uint32 db_port = 2;
    string db_username = 3;
    string db_password = 4;
    string db_name = 5;
}

message BackupReply {
    string file_id = 1;
}

message RestoreRequest {
    string db_host = 1;
    uint32 db_port = 2;
    string db_username = 3;
    string db_password = 4;
    string db_name = 5;
    string folder_name = 6;
}

message RestoreReply {
    string file_id = 1;
}

message HealthcheckReply {
    bool is_ok = 1;
}